<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nerd Mood</string>
    <string name="action_settings">Configura&#231;&#245;es</string>
    <string name="hello_world">Hello world!</string>
    <string name="teste">Teste de commit da Amanda!</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Logar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="show_mood">Show, hein!</string>
    <string name="leso_mood">Telez&#233;!</string>
    <string name="coments_mood">Coment&#225;rios</string>

</resources>